# prono

./: .clippy.toml  .gitattributes  .gitignore  .tarpaulin.toml  .typos.toml  CONTRIBUTION.md  Cargo.toml  README.md  TASKS.md  _typos.toml  check.sh  checks.sh  index.html  prono-5fd7321ee775d764.js  prono-5fd7321ee775d764_bg.wasm  prono-app.js  prono-app_bg.wasm  prono-b49610c119a17d2e.js  prono-b49610c119a17d2e_bg.wasm  rust-toolchain.toml  secure_config.toml  sw.js
.cargo/: audit.toml
.git-crypt/keys/default/0/: D21E69091276583A86984CB7D372DF7A2D9ABB6A.gpg
.github/workflows/: pages.yml  rust.yml
api/: Cargo.toml
api/src/: entities.rs  lib.rs  ports.rs
api/src/ports/: surveys.rs
app/: Cargo.toml  README.md  index.html
app/assets/: sw.js
app/src/: adapters.rs  app.rs  entities.rs  main.rs  main_native.rs  main_wasm.rs
app/src/adapters/: app.rs  config_read.rs  error_overlay.rs  footer.rs  identity_native.rs  identity_wasm.rs  survey_ui.rs  timeline.rs
app/src/entities/: answer.rs  db_config.rs  question.rs  secure_config.rs  survey.rs  survey_state.rs
assets/: manifest.json
backend/: Cargo.toml  README.md
backend/install/: build-spk.sh  prono-backend.service  sync.sh
backend/install/spk/: INFO
backend/install/spk/scripts/: postinst  postuninst  preinst  start-stop-status
backend/src/: lib.rs  main.rs  use_cases.rs
backend/src/adapters/: rest.rs
backend/src/ports/: errors.rs
backend/src/use_cases/: survey_service.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
coverage/: Cargo.toml  README.md
coverage/src/: main.rs
db/: README.md
db/src/: lib.rs
db/src/adapters/: mysql_db.rs
db/src/ports/: config.rs
generic/: Cargo.toml
generic/src/: error_handling.rs
prono/: Cargo.toml
prono/src/: adapters.rs  entities.rs  lib.rs  ports.rs  use_cases.rs
prono/src/adapters/: config_reader.rs  mysql_prono_db.rs
prono/src/entities/: answer.rs  file_survey.rs  question.rs  survey.rs
prono/src/ports/: api.rs  config_read.rs  db_config.rs  errors.rs  factory.rs  prono.rs  prono_db.rs  repo.rs  secure_config.rs
prono/src/ports/api/: answer.rs  question.rs  survey.rs
prono/src/ports/prono_db/: config.rs
prono/src/ports/repo/: answer.rs  question.rs  survey.rs
prono/src/use_cases/: fake_db.rs
prono_api/: Cargo.toml
prono_api/src/: lib.rs  ports.rs
prono_api/src/ports/: answer.rs  identity.rs  question.rs  survey.rs  surveys.rs
prono_db/: Cargo.toml  README.md
prono_db/src/: adapters.rs  entities.rs  lib.rs  ports.rs
prono_db/src/adapters/: mysql_db.rs  mysql_prono_db.rs
prono_db/src/entities/: answer_response.rs  user.rs
prono_db/src/ports/: answer.rs  config.rs  errors.rs
src/: adapters.rs  app.rs  entities.rs  generic.rs  lib.rs  main.rs  ports.rs
src/adapters/: config_read.rs  mysql_db.rs  mysql_prono_db.rs  mysql_proto_db.rs  test_config.toml
src/configurations/: survey_spacex_starship.json
src/entities/: answer.rs  config.rs  question.rs  survey.rs
src/generic/: error_handling.rs
src/ports/: config_read.rs  db.rs  db_survey.rs  file_survey.rs  proto_db.rs  secure_config.rs
src/ports/prono_db/: answer.rs  survey.rs
src/ports/proto_db/: user.rs
