[package]
name = "prono-app"
version = "0.1.0"
authors = ["Sam Jaques <sam.jaques@me.com>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.88"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
prono = { path = "../prono" }

egui = "0.33.3"
eframe = { version = "0.33.3", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
log = "0.4.27"
secure-string = { version = "0.3.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.19"
chrono = "0.4.42"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
prono_db = { path = "../prono_db" }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"
# fix compile error because of stepping to egui 0.33,
getrandom_v2 = { version = "0.2", features = ["js"], package = "getrandom" }
getrandom    = { version = "0.3", features = ["wasm_js"] }

[profile.release]
opt-level = 2 # fast and small wasm

[dev-dependencies]
generic = { path = "../generic" }

rstest = "0"
