[package]
name = "prono-app"
version = "0.1.0"
authors = ["Sam Jaques <sam.jaques@me.com>"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.88"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
prono_api = { path = "../prono_api", features = ["serde"] }

egui = "0.33.3"
eframe = { version = "0.33.3", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
prono = { path = "../prono" }
prono_db = { path = "../prono_db" }
tokio = { version = "1.49.0", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }

env_logger = "0.11.8"
uuid = { version = "1", features = ["v4"] }
dirs = "6.0.0"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"
gloo-net = { version = "0.6", features = ["http"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "js"] }
# fix compile error because of stepping to egui 0.33,
getrandom_v2 = { version = "0.2", features = ["js"], package = "getrandom" }
getrandom    = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
generic = { path = "../generic" }
prono_api = { path = "../prono_api", features = ["test-utils"] }
rstest = "0.26"
