[package]
name = "prono-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
prono = { path = "../prono" }
prono_db = { path = "../db" }
prono_api = { path = "../api", features = ["serde"] }

actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2.0.18"

[dev-dependencies]
rstest = "0.26"
