[package]
name = "prono"
version = "0.1.0"
edition = "2024"

[dependencies]
prono_api = { path = "../prono_api" }

chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11.0", features = ["js", "v4", "v5"] }
async-trait = "0.1"
log = "0.4.29"
thiserror = "2.0.17"
tokio = { version = "1.49.0", default-features = false, features = ["rt", "macros"] }

[dev-dependencies]
rstest = "0"
