[package]
name = "prono_db"
version = "0.1.0"
edition = "2024"

[dependencies]
prono = { path = "../prono" }

sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-native-tls"] }
log = "0.4.29"
tokio = { version = "1.48.0", features = ["rt", "macros"] }
secure-string = "0.3.0"

[dev-dependencies]
generic = { path = "../generic" }

rstest = "0"
