[package]
name = "prono_db"
version = "0.1.0"
edition = "2024"

[dependencies]
prono = { path = "../prono" }

async-trait = "0.1.89"
log = "0.4.29"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio"] }
secure-string = "0.3.0"
thiserror = "2.0.18"

[dev-dependencies]
generic = { path = "../generic" }

rstest = "0.26"
